frontend/test/should_pass/github_bushuo.gm
node class Empty
{
	id:int;
}
node class Center;
