frontend/test/should_fail/computations_no_procmethod.gm
node class NO
{
	procedure no() : (int)
	{
		return(42);
	}
}
